--- a/04-Supplement-Programming-Materials/Supplement-4_3.ipynb
+++ b/04-Supplement-Programming-Materials/Supplement-4_3.ipynb
@@ -343,7 +343,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.15"
+      "version": "3.9.15 (main, Nov  4 2022, 16:13:54) \n[GCC 11.2.0]"
     },
     "nteract": {
       "version": "0.15.0"
